--- a/paristanbul-recrutement-original/merci.html
+++ b/paristanbul-recrutement-original/merci.html
@@ -1,3 +1,4 @@
+<!-- merci.html-->
 <!DOCTYPE html>
 <html lang="fr">
 <head>
@@ -85,7 +86,9 @@
 <div class="wrap">
     <div class="card">
         <img class="logo" src="https://play-lh.googleusercontent.com/4-hTf32960CWp7N_cBSNN7UnH3UNHMzgye3wGzXqSp69-iAc7-88jwc1jPlkeqDktLE=w240-h480" alt="Paristanbul">
+        <br>
         <h1>Merci pour votre candidature !</h1>
+        <br>
         <p>Votre dossier a bien été transmis à notre équipe RH de Melun. Nous vous contacterons si votre profil correspond.</p>
         <a class="button" href="postuler.php">Revenir au formulaire</a>
     </div>
