--- a/paristanbul-recrutement-original/qr-rejoignez-nous.html
+++ b/paristanbul-recrutement-original/qr-rejoignez-nous.html
@@ -61,7 +61,9 @@
 
         .qr{
             width:260px; height:260px; margin:18px auto;
-            border:10px solid #111; border-radius:24px
+          
+
+
         }
 
         .cta{
@@ -94,11 +96,14 @@
 <div class="sheet">
     <div class="panel">
         <img class="logo" src="https://play-lh.googleusercontent.com/4-hTf32960CWp7N_cBSNN7UnH3UNHMzgye3wGzXqSp69-iAc7-88jwc1jPlkeqDktLE=w240-h480" alt="Paristanbul">
-        <span class="pill">Supermarché Paristanbul — Melun recrute</span>
+        <br>
         <h1>Rejoignez-nous</h1>
+        <br>
+        <span class="pill">Supermarché Paristanbul — Melun recrute</span>
+
         <h2>Postulez en 2 minutes avec le QR code</h2>
 
-        <div id="qrcode" class="qr" aria-label="QR code vers le formulaire"></div>
+        <div id="qrcode" class="qr" aria-label="QR code vers le formulaire"><img src="qrcodemelun.png" style="height: 280px"></div>
 
 
         <div class="grid">
